[tool.poetry]
name = "data-starter-project"
version = "0.1.0"
description = ""
authors = ["Vinicius Marotti <vinicius.marotti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
